[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/Clickable.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 19.1571

[node name="Clickable" type="Node2D"]
script = ExtResource( 1 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
